force-app/main/default/objects/N26_Product__c/N26_Product__c.object-meta.xml
<CustomObject>
    <label>N26 Product</label>
    <nameField>
        <displayFormat>N26-{000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>N26 Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>