force-app/main/default/objects/N26_Product__c/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <label>ATM Fee in other currencies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>