force-app/main/default/objects/N26_Product__c/fields/Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Cost__c</fullName>
    <label>Cost per Calendar Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>