force-app/main/default/objects/N26_Product__c/fields/Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Cost__c</fullName>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>