force-app/main/default/objects/N26_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Country__c</columns>
    <columns>Currency__c</columns>
    <columns>Monthly_Cost__c</columns>
    <columns>ATM_Fee__c</columns>
    <columns>Replacement_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>